--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,20 @@
 body {
   background: linear-gradient(
     90deg,
-    rgba(48, 16, 255, 1) 0%,
-    rgba(100, 115, 255, 1) 100%
+    rgb(85, 80, 119) 0%,
+    rgb(13, 13, 15) 100%
   );
 }
 .todo-app {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 45%;
+  width: 50%;
   min-height: 600px;
   background: white;
   text-align: center;
   margin: 128px auto;
-  border-radius: 10px;
+  border-radius: 15px;
   padding-bottom: 32px;
 }
 
@@ -30,7 +30,7 @@ body {
   margin-right: 5px;
   width: 20px;
   border-width: 1px;
-  border-radius: 49%;
+  border-radius: 50%;
   padding: 1px;
   border-color: white;
   color: white;
@@ -39,7 +39,8 @@ body {
 
 h1 {
   margin: 32px 0;
-  font-size: 33px;
+  color: rgb(12, 12, 12);
+  font-size: 35px;
 }
 
 .complete {
@@ -52,8 +53,8 @@ h1 {
 
 .todo-input {
   padding: 14px 32px 14px 16px;
-  border-radius: 4px 0 0 4px;
-  border: 2px solid rgba(17, 122, 255, 1);
+  border-radius: 10px 0 0 10px;
+  border: 2px solid rgb(249, 156, 90);
   outline: none;
   width: 320px;
 }
@@ -61,14 +62,10 @@ h1 {
 .todo-button {
   padding: 16px;
   border: none;
-  border-radius: 0 4px 4px 0;
+  border-radius: 0 10px 10px 0;
   cursor: pointer;
   outline: none;
-  background: linear-gradient(
-    90deg,
-    rgba(17, 122, 255, 1) 0%,
-    rgba(20, 159, 255, 1) 100%
-  );
+  background: orange;
   color: white;
   text-transform: capitalize;
 }
@@ -85,13 +82,9 @@ h1 {
   align-items: center;
   margin: 4px auto;
   color: white;
-  background: linear-gradient(
-    90deg,
-    rgba(20, 159, 255, 1) 0%,
-    rgba(17, 122, 255, 1) 100%
-  );
+  background: orange;
   padding: 16px;
-  border-radius: 5px;
+  border-radius: 15px;
   width: 90%;
 }
 
